--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,10 @@
           <% end %>
         </div>
         <div class = "col-md-2">
-          <%= link_to new_post_path do %>
-            <h1>✉️</h1>
+          <% if user_signed_in? %>
+            <%= link_to new_post_path do %>
+              <h1>✉️</h1>
+            <% end %>
           <% end %>
         </div>
       </div>
