--- a/app/views/users/searches/search.html.erb
+++ b/app/views/users/searches/search.html.erb
@@ -17,57 +17,153 @@
     <div class = "col-md-12">
       <% @posts.each do |post| %>
         <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
-          <%= link_to user_path(post.user), class: 'w-100' do %>
-            <div class = "row">
-              <div class = "col-md-2">
-                <% if post.user.image? %>
-                  <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
-                <% else %>
-                  <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                <% end %>
-              </div>
-              <div class = "col-md-5">
-                <%= post.user.name %>
-              </div>
-              <div class = "col-md-5">
-                <%= post.value %>
-              </div>
-            </div>
-          <% end %>
-          <%= link_to(post_path(post.id)) do %>
-            <div class = "row">
-              <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-                <div class = "col-md-12 mb-3">
-                  <%= post.title %>
-                </div>
-              </div>
-            </div>
-            <div class = "offset-md-1 col-md-10">
+          <% if post.value == 0 %>
+            <%= link_to user_path(post.user), class: 'w-100' do %>
               <div class = "row">
-                <div class = "col-md-12">
-                  返信数：<%= post.post_comments.count %>
-                </div>
-                <div class = "offset-md-8">
-                  <% if post.favorited_by?(current_user) %>
-                    <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-                      <span aria-hidden="true"></span>
-                      いいね数：<%= post.favorites.count %>
-                    <% end %>
+                <div class = "col-md-2">
+                  <% if post.user.image? %>
+                    <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                   <% else %>
-                    <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-                      <span aria-hidden="true"></span>
-                      いいね数：<%= post.favorites.count %>
-                    <% end %>
+                    <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                   <% end %>
                 </div>
+                <div class = "col-md-5">
+                  <%= post.user.name %>
+                </div>
               </div>
-            </div>
+            <% end %>
+            <%= link_to post_path(post.id) do %>
+              <div class = "row">
+                <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                  <div class = "col-md-12 mb-3">
+                    <%= post.title %>
+                  </div>
+                </div>
+              </div>
+              <div class = "offset-md-1 col-md-10">
+                <div class = "row">
+                  <div class = "col-md-12">
+                    返信数：<%= post.post_comments.count %>
+                  </div>
+                  <div class = "offset-md-8">
+                    <% if post.favorited_by?(current_user) %>
+                      <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
+                        <span aria-hidden="true"></span>
+                        いいね数：<%= post.favorites.count %>
+                      <% end %>
+                    <% else %>
+                      <%= link_to post_favorites_path(post), method: :post, remote: true do %>
+                        <span aria-hidden="true"></span>
+                        いいね数：<%= post.favorites.count %>
+                      <% end %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          <% else %>
+            <% if (current_user == post.user) || (current_user.orders.exists?(post_number: post.id)) %>
+              <%= link_to user_path(post.user), class: 'w-100' do %>
+                <div class = "row">
+                  <div class = "col-md-2">
+                    <% if post.user.image? %>
+                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
+                    <% else %>
+                      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
+                    <% end %>
+                  </div>
+                  <div class = "col-md-5">
+                    <%= post.user.name %>
+                  </div>
+                  <div class = "col-md-5">
+                    価値：<%= post.value %>
+                  </div>
+                </div>
+              <% end %>
+              <%= link_to post_path(post.id) do %>
+                <div class = "row">
+                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                    <div class = "col-md-12 mb-3">
+                      <%= post.title %>
+                    </div>
+                  </div>
+                </div>
+                <div class = "offset-md-1 col-md-10">
+                  <div class = "row">
+                    <div class = "col-md-12">
+                      返信数：<%= post.post_comments.count %>
+                    </div>
+                    <div class = "offset-md-8">
+                      <% if post.favorited_by?(current_user) %>
+                        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
+                          <span aria-hidden="true"></span>
+                          いいね数：<%= post.favorites.count %>
+                        <% end %>
+                      <% else %>
+                        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
+                          <span aria-hidden="true"></span>
+                          いいね数：<%= post.favorites.count %>
+                        <% end %>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% else %>
+              <%= link_to user_path(post.user), class: 'w-100' do %>
+                <div class = "row">
+                  <div class = "col-md-2">
+                    <% if post.user.image? %>
+                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
+                    <% else %>
+                      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
+                    <% end %>
+                  </div>
+                  <div class = "col-md-5">
+                    <%= post.user.name %>
+                  </div>
+                  <div class = "col-md-5">
+                    価値：<%= post.value %>
+                  </div>
+                </div>
+              <% end %>
+              <%= link_to confilm_path(post.id) do %>
+                <div class = "row">
+                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                    <div class = "col-md-10 mb-3">
+                      <%= post.title %>
+                    </div>
+                    購入すると本文が見れるようになります
+                  </div>
+                </div>
+                <div class = "offset-md-1 col-md-10">
+                  <div class = "row">
+                    <div class = "col-md-12">
+                      返信数：<%= post.post_comments.count %>
+                    </div>
+                    <div class = "offset-md-8">
+                      <% if post.favorited_by?(current_user) %>
+                        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
+                          <span aria-hidden="true"></span>
+                          いいね数：<%= post.favorites.count %>
+                        <% end %>
+                      <% else %>
+                        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
+                          <span aria-hidden="true"></span>
+                          いいね数：<%= post.favorites.count %>
+                        <% end %>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
           <% end %>
           <div class = "row">
             <div class = "offset-md-11">
               <div class="dropdown">
                 <!-- 切替ボタンの設定 -->
-                <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                 <!-- ドロップメニューの設定 -->
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <% if current_user.id == post.user.id %>
