--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -233,26 +233,81 @@
         <div class = "col-md-12">
           <% @post_comments.each do |post_comment| %>
             <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
-              <div class = "row">
-                <div class = "col-md-2">
-                  <% if post_comment.user.image? %>
-                    <%= image_tag asset_path(post_comment.user.image.url), :size => '50x50' %>
-                  <% else %>
-                    <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                  <% end %>
-                </div>
-                <div class = "col-md-5">
-                  <%= post_comment.user.name %>
-                </div>
-              </div>
-              <%= link_to post_path(post_comment.post) do %>
+              <% if post_comment.post.value == 0 %>
                 <div class = "row">
-                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen;">
-                    <div class = "col-md-12 mb-3">
-                      <%= post_comment.comment %>
-                    </div>
+                  <div class = "col-md-2">
+                    <% if post_comment.post.user.image? %>
+                      <%= image_tag asset_path(post_comment.post.user.image.url), :size => '50x50' %>
+                    <% else %>
+                      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
+                    <% end %>
+                  </div>
+                  <div class = "col-md-5">
+                    <%= post_comment.post.user.name %>
                   </div>
                 </div>
+                <%= link_to post_path(post_comment.post.id) do %>
+                  <div class = "row">
+                    <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                      <div class = "col-md-12 mb-3">
+                        <%= post_comment.comment %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              <% else %>
+                <% if (current_user == post_comment.post.user) || (current_user.orders.exists?(post_number: post_comment.post.id)) %>
+                  <div class = "row">
+                    <div class = "col-md-2">
+                      <% if post_comment.post.user.image? %>
+                        <%= image_tag asset_path(post_comment.post.user.image.url), :size => '50x50' %>
+                      <% else %>
+                        <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
+                      <% end %>
+                    </div>
+                    <div class = "col-md-5">
+                      <%= post_comment.post.user.name %>
+                    </div>
+                    <div class = "col-md-5">
+                      価値：<%= post_comment.post.value %>
+                    </div>
+                  </div>
+                  <%= link_to post_path(post_comment.post.id) do %>
+                    <div class = "row">
+                      <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                        <div class = "col-md-12 mb-3">
+                          <%= post_comment.comment %>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                <% else %>
+                  <div class = "row">
+                    <div class = "col-md-2">
+                      <% if post_comment.post.user.image? %>
+                        <%= image_tag asset_path(post_comment.post.user.image.url), :size => '50x50' %>
+                      <% else %>
+                        <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
+                      <% end %>
+                    </div>
+                    <div class = "col-md-5">
+                      <%= post_comment.post.user.name %>
+                    </div>
+                    <div class = "col-md-5">
+                      価値：<%= post_comment.post.value %>
+                    </div>
+                  </div>
+                  <%= link_to confilm_path(post_comment.post.id) do %>
+                    <div class = "row">
+                      <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                        <div class = "col-md-10 mb-3">
+                          <%= post_comment.comment %>
+                        </div>
+                        購入すると返信先が見れるようになります
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
               <% end %>
               <div class = "row">
                 <div class = "offset-md-11">
